syntax = "proto3";

package message;

option go_package = "proto.message";

service MessageService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string content = 1;
}

message MessageResponse {
  string status = 1;
  string content = 2;
}